<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/Background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_1"
            android:layout_width="147dp"
            android:layout_height="126dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/gambar1" />

        <ImageView
            android:layout_marginTop="50dp"
            android:background="@color/black"
            android:id="@+id/img_2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/img_1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/logobaru" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/lampu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:text="LAMPU"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:textColor="@color/Black"
            android:textSize="30dp" />


    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/mode"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="1dp"
        android:textOff="@string/mode_manual"
        android:textOn="@string/mode_automatic"
        android:thumb="@drawable/thumb"
        app:showText="true"
        app:track="@drawable/track" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@color/yellow"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <TextView
                    android:id="@+id/tv_lampu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=   "@string/lampu1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/Background"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:id="@+id/lampu1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Nyala"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sw_lampu1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textOff="@string/switch_off"
                        android:textOn="@string/switch_on"
                        android:thumb="@drawable/thumb"
                        app:showText="true"
                        app:track="@drawable/track" />



                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@color/yellow"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <TextView
                    android:id="@+id/tv_lampu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=   "@string/lampu2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />



                <androidx.cardview.widget.CardView
                    android:id="@+id/LampuStudio"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/Background"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">
                    <TextView
                        android:id="@+id/lampu2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Nyala"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sw_lampu2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textOff="@string/switch_off"
                        android:textOn="@string/switch_on"
                        android:thumb="@drawable/thumb"
                        app:showText="true"
                        app:track="@drawable/track" />

                </androidx.cardview.widget.CardView>



            </androidx.cardview.widget.CardView>




        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/pager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:text="PAGAR"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:textColor="@color/Black"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginRight="10dp"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/tv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=   "@string/pager"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/Background"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_pagar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textOff="@string/off"
                    android:textOn="@string/on"
                    android:layout_marginVertical="100dp"
                    android:thumb="@drawable/thumb"
                    android:visibility="visible"
                    app:showText="true"
                    app:track="@drawable/track">

                </androidx.appcompat.widget.SwitchCompat>


            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="300dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:background="#DC0808"
            android:padding="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/logout"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_logout" />
    </LinearLayout>



</LinearLayout>

